# rust-lut

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.devcontainer/: Dockerfile  devcontainer.json
.github/actions/install-llvm-spirv/: action.yml
.github/actions/install-opencl/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: benchmark.yml  ci.yml  release.yml
benches/: processing_benchmark.rs
crates/build-shaders/: Cargo.toml  build.rs  rust-toolchain.toml
crates/build-shaders/src/: lib.rs
crates/compute-shader/: Cargo.toml
data/: .gitignore  example_short.cube
dev/bench/: data.js
src/: lib.rs  lut.rs  main.rs  processing.cl  processing.rs  processing_ocl.rs  processing_wgpu.rs
