[package]
name = "rust-lut"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[[bin]]
name = "rust-lut"
path = "src/main.rs"
bench = false

[dependencies]
# Image processing
image = "0.25.5"
glam = "0.30.0"
rayon = { version = "1.10", optional = true }
ocl = { version = "0.19", features = ["opencl_version_2_1"] }

[features]
default = ["rayon", "spirv"]
rayon = ["dep:rayon"]
spirv = []

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "processing_benchmark"
harness = false
